--- a/game.html
+++ b/game.html
@@ -17,6 +17,9 @@
 			<div id = "title">
 				<h1>Memory</h1>
 			</div>
+			
+			<button id = "leaderboard"><a href = "/leaderboard.html">Leaderboard</a></button>
+			
 			<div id = "gameTrackers">
   					<h4>Timer:</h4>
   					<output id="timer">00:00</output>
