--- a/leaderboard.html
+++ b/leaderboard.html
@@ -21,7 +21,13 @@
 		
 		<button id = "leaderboard"><a href = "/game.html">Return to Game</a></button>
 		
-		<div id = "scores">
+		<div id = "easyScores">
+		</div>
+		
+		<div id = "mediumScores">
+		</div>
+		
+		<div id = "hardScores">
 		</div>
 	
 	</body>
