--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
 		</div>
 		<div id = "new_user">
 			<h3>New Player</h3>
-			<form action = "/upload" method = "POST" enctype="multipart/form-data">
-				New User Name: <input type = "text" name = "uname"/><br/>
-				New Password: <input type = "text" name = "password"/><br/>
-				<input type = "submit" value = "Submit"/>
-			</form>
+			<p>User Name:</p> <input type = "text" id = "uname2" name = "uname"/><br/>
+			<p>Password:</p> <input type = "text" id = "password2" name = "password"/><br/>
+			<button id = "submitNew">Submit</button>
 		</div>
 
 		<script src="scripts/game.js"></script>
