--- a/leaderboard.html
+++ b/leaderboard.html
@@ -21,6 +21,10 @@
 		
 		<button id = "leaderboard"><a href = "/game.html">Return to Game</a></button>
 		
+		<div id = "update">
+			<button id = "submitBoard" onclick = "updateBoard()">Submit</button>
+		</div>
+		
 		<div id = "easyScores">
 		</div>
 		
@@ -29,6 +33,8 @@
 		
 		<div id = "hardScores">
 		</div>
+	
+		<script src="scripts/game.js"></script>
 	
 	</body>
 </html>
