--- a/leaderboard.html
+++ b/leaderboard.html
@@ -22,7 +22,7 @@
 		<button id = "leaderboard"><a href = "/game.html">Return to Game</a></button>
 		
 		<div id = "update">
-			<button id = "submitBoard" onclick = "updateBoard()">Submit</button>
+			<button id = "submitBoard" onclick = "updateBoard()">Update</button>
 		</div>
 		
 		<div id = "easyScores">
