--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 			<button id = "submitNew">Submit</button>
 		</div>
 
-		<script src="scripts/game.js"></script>
+		<script src = "scripts/game.js"></script>
 		<script> 
-			var init = init() 
+			var init = init(); 
 		</script>
 
 	</body>
