--- a/leaderboard.html
+++ b/leaderboard.html
@@ -25,13 +25,21 @@
 			<button id = "submitBoard" onclick = "updateBoard()">Update</button>
 		</div>
 		
-		<div id = "easyScores">
-		</div>
+		<table id = "etable">
+		</table>
 		
-		<div id = "mediumScores">
-		</div>
+		</br>
+		</br>
+		</br>
 		
-		<div id = "hardScores">
+		<table id = "mtable">
+		</table>
+		
+		</br>
+		</br>
+		</br>
+		
+		<table id = "htable">
 		</div>
 	
 		<script src="scripts/game.js"></script>
