--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
 
 
 		<script type="application/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    	<script type="application/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
 
     	<link rel = "stylesheet" href = "css/style.css"/>
 		
 	</head>
 	<body>
 		<div id = "header">
-			<div id = "title">
-				<h1>Sign in to play Memory!</h1>
-			</div>
+			<h1 id = "title">Memory</h1>
 		</div>
+
 		<div id = "user_login">
 			<h3>Returning Player</h3>
 			<p>User Name:</p> <input type = "text" id = "uname" name = "uname"/><br/>
@@ -30,6 +28,12 @@
 			<p>User Name:</p> <input type = "text" id = "uname2" name = "uname"/><br/>
 			<p>Password:</p> <input type = "text" id = "password2" name = "password"/><br/>
 			<button id = "submitNew">Submit</button>
+		</div>
+		
+		</div>
+
+	
+		<div id = "gameContent">
 		</div>
 
 		<script src = "scripts/game.js"></script>
