--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/projects.css"/>
 	</head>
 
 	<body>
@@ -15,9 +15,18 @@
 		</div>
 		<div id = "jordan">
 			<h3 id = "titleJ"> About Jordan </h3>
-  			<img src = "images/selfphoto.jpg"/>
+  			<img src = "images/selfphoto.jpg" alt = "Image of Jordan"/>
   			<p>I am a senior studying Applied Mathematics at the University of St. Thomas. Near the end of my Sophmore year, after taking an Intro to Computer Science course, I decided to pair my math major with a CS minor. After graduation, I am starting a job at Wells Fargo as an Associate Internal Auditor and I could not be more excited!</p>
   			<p>Along with schooling, I keep busy with a part-time job working for Hennepin County Government Center in their Information Technology department. I also recently became an assistant coach for my old high school's dance team and kept my passion for dance alive. With the little free time I have, I like to spend time exploring and trying out new restaurants and breweries located around the cities with my family and friends.</p>
+		</div>
+		<div id = "andrew">
+			<h3 id = "titleA"> About Andrew </h3>
+  			<img src = "images/seniorpic.jpg" alt = "Image of Andrew"/>
+		</div>
+
+		<div id = "tools used">
+			<p><b>jQuery:</b> This javascript library helped us simplify our code and made a lot of our functions in javascript easier to understand and work with. This function allowed for us to get and exchange data on our webpage, without having to reload the whole thing each time we got a new piece of data. </p>
+			<p><b>Node.js and Express.js:</b> Node.js is an open-source, cross-platform runtime environment which allowed us to develop server-side in our web application. Express.js is a framework used with Node.js that helped make our development a lot simplier. </p>
 		</div>
 
 	</body>
