--- a/public/projects.html
+++ b/public/projects.html
@@ -15,13 +15,14 @@
 		</div>
 		<div id = "jordan">
 			<h3 id = "titleJ"> About Jordan </h3>
-  			<img src = "images/selfphoto.jpg" alt = "Image of Jordan"/>
+  			<img src = "images/selfphotoJ.jpg" style="width:200px;height:auto;" alt = "Image of Jordan"/>
   			<p>I am a senior studying Applied Mathematics at the University of St. Thomas. Near the end of my Sophmore year, after taking an Intro to Computer Science course, I decided to pair my math major with a CS minor. After graduation, I am starting a job at Wells Fargo as an Associate Internal Auditor and I could not be more excited!</p>
   			<p>Along with schooling, I keep busy with a part-time job working for Hennepin County Government Center in their Information Technology department. I also recently became an assistant coach for my old high school's dance team and kept my passion for dance alive. With the little free time I have, I like to spend time exploring and trying out new restaurants and breweries located around the cities with my family and friends.</p>
 		</div>
 		<div id = "andrew">
 			<h3 id = "titleA"> About Andrew </h3>
-  			<img src = "images/seniorpic.jpg" alt = "Image of Andrew"/>
+  			<img src = "images/seniorpic.JPG" style="width:200px;height:auto;" alt = "Image of Andrew"/>
+			<p>I'm Andrew Stuempfig, and I am currently a senior at the University of St. Thomas in St. Paul, Minnesota. I am majoring in Business Economics, with a minor in Computer Science. I have interned at both SRF Consulting Group, Inc. and AXA Advisors. Outside of the classroom, I have played soccer my entire life, including four years on the team at St. Thomas, and I currently produce a soccer podcast.</p>
 		</div>
 
 		<div id = "tools used">
@@ -32,3 +33,6 @@
 	</body>
 
 </html>
+
+
+style="color:blue;margin-left:30px;"
