--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
 		<div id = "user_login">
 			<h3>Returning Player</h3>
 			<p>User Name:</p> <input type = "text" id = "uname" name = "uname"/><br/>
-			<p>Password:</p> <input type = "text" id = "password" name = "password"/><br/>
+			<p>Password:</p> <input type = "password" id = "password" name = "password"/><br/>
 			<button id = "submit">Submit</button>
 
 		</div>
 		<div id = "new_user">
 			<h3>New Player</h3>
 			<p>User Name:</p> <input type = "text" id = "uname2" name = "uname"/><br/>
-			<p>Password:</p> <input type = "text" id = "password2" name = "password"/><br/>
+			<p>Password:</p> <input type = "password" id = "password2" name = "password"/><br/>
 			<button id = "submitNew">Submit</button>
 		</div>
 		
