--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -23,6 +23,10 @@
 		<div id = "update">
 			<button id = "submitBoard" onclick = "updateBoard()">Update</button>
 		</div>
+
+		<div id = "userTable" border = 1>
+		</div>
+		<br/>
 		
 		<div id = "easyTable">
 			<table id = "etable" border = 1>
