--- a/public/projects.html
+++ b/public/projects.html
@@ -24,8 +24,9 @@
   			<img src = "images/seniorpic.JPG" style="width:200px;height:auto;" alt = "Image of Andrew"/>
 			<p>I'm Andrew Stuempfig, and I am currently a senior at the University of St. Thomas in St. Paul, Minnesota. I am majoring in Business Economics, with a minor in Computer Science. I have interned at both SRF Consulting Group, Inc. and AXA Advisors. Outside of the classroom, I have played soccer my entire life, including four years on the team at St. Thomas, and I currently produce a soccer podcast.</p>
 		</div>
-
+		<br/>
 		<div id = "tools used">
+			<h3>Tools we used:</h3>
 			<p><b>jQuery:</b> This javascript library helped us simplify our code and made a lot of our functions in javascript easier to understand and work with. This function allowed for us to get and exchange data on our webpage, without having to reload the whole thing each time we got a new piece of data. </p>
 			<p><b>Node.js and Express.js:</b> Node.js is an open-source, cross-platform runtime environment which allowed us to develop server-side in our web application. Express.js is a framework used with Node.js that helped make our development a lot simplier. </p>
 		</div>
@@ -34,5 +35,3 @@
 
 </html>
 
-
-style="color:blue;margin-left:30px;"
