--- a/public/projects.html
+++ b/public/projects.html
@@ -30,6 +30,11 @@
 			<p><b>jQuery:</b> This javascript library helped us simplify our code and made a lot of our functions in javascript easier to understand and work with. This function allowed for us to get and exchange data on our webpage, without having to reload the whole thing each time we got a new piece of data. </p>
 			<p><b>Node.js and Express.js:</b> Node.js is an open-source, cross-platform runtime environment which allowed us to develop server-side in our web application. Express.js is a framework used with Node.js that helped make our development a lot simplier. </p>
 		</div>
+		
+		
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/T6ceSwNr5wA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
+		
 
 	</body>
 
